Hosted images on imgur

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,7 @@ subject: coinbase reciept
     <columns style="padding-left: 70px !important; padding-right: 70px !important; padding-bottom: 0px !important;">
       <row>
         <columns>
-          <img src="{{root}}/assets/img/coinbase/green-success.png" alt="success check mark"
+          <img src="https://i.imgur.com/tRpPGRJ.png" alt="success check mark"
             style="width: 80px !important; margin: 0 auto !important; padding-top: 40px !important;">
         </columns>
       </row>
